--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     },
     "authors": [
         {
-            "name": "Cristan Josh S. Nuguid",
-            "email": "nuguid.cristanjosh@auf.edu.ph"
+            "name": "Baron Basquinas",
+            "email": "barbasquinas08@gmail.com"
         }
     ],
     "require": {
